[package]
name = "todo"
version = "0.2.0"
authors = ["Daniil Naumetc <daniil.naumetc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[[bin]]
name = "todo"
path = "src/todo.rs"

[[bin]]
name = "d0ne"
path = "src/d0ne.rs"

[[bin]]
name = "todos"
path = "src/todos.rs"

[[bin]]
name = "__d0ne_completion"
path = "src/__d0ne_completion.rs"